--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,3 +1,5 @@
+# BLENDER MANIFESTO
+
 schema_version = "1.0.0"
 
 id = "ai_motion_bridge"
@@ -12,7 +14,7 @@ type = "add-on"
 
 tags = ["Animation"]
 
-blender_version_min = "4.0.0"
+blender_version_min = "4.2.0"
 # blender_version_max = "4.2.0"
 
 license = [
