--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,18 +1,17 @@
-# BLENDER MANIFESTO
+# AI ANIMATION BRIDGE MANIFESTO
 
 schema_version = "1.0.0"
 
-id = "ai_motion_bridge"
+id = "ai_animation_bridge"
 version = "1.0.0"
-name = "AI Motion Bridge"
-tagline = "Blend animations using AI to fill gaps or create transitions"
-maintainer = "Pluginowcy email@address.com"
+name = "AI Animation Bridge"
+tagline = "Generate in-between animations using AI models"
+maintainer = "Pluginowcy AGH <pluginowcy_agh@protonmail.com>"
 type = "add-on"
 
-# # Optional: link to documentation, support, source files, etc
-# website = "https://extensions.blender.org/add-ons/my-example-package/"
+website = "https://github.com/kottajl/blender-plug-in-for-modifying-3D-animations"
 
-tags = ["Animation"]
+tags = ["Animation", "3D View"]
 
 blender_version_min = "4.2.0"
 
@@ -20,32 +19,29 @@ license = [
   "SPDX:GPL-3.0-or-later",
 ]
 
-# # Optional: list of supported platforms. If omitted, the extension will be available in all operating systems.
-# platforms = ["windows-x64", "macos-arm64", "linux-x64"]
-# # Other supported platforms: "windows-arm64", "macos-x64"
-
-# # Optional: bundle 3rd party Python modules.
-# # https://docs.blender.org/manual/en/dev/advanced/extensions/python_wheels.html
-# wheels = [
-#   "./wheels/hexdump-3.3-py3-none-any.whl",
-#   "./wheels/jsmin-3.0.1-py3-none-any.whl",
-# ]
-
-# # Optional: add-ons can list which resources they will require:
-# # * files (for access of any filesystem operations)
-# # * network (for internet access)
-# # * clipboard (to read and/or write the system clipboard)
-# # * camera (to capture photos and videos)
-# # * microphone (to capture audio)
-# #
-# # If using network, remember to also check `bpy.app.online_access`
-# # https://docs.blender.org/manual/en/dev/advanced/extensions/addons.html#internet-access
-# #
-# # For each permission it is important to also specify the reason why it is required.
-# # Keep this a single short sentence without a period (.) at the end.
-# # For longer explanations use the documentation or detail page.
-#
+platforms = ["windows-x64", "macos-arm64", "linux-x64", "windows-arm64", "macos-x64"]
 
 [permissions]
-files = "Import and export motion-capture data"
-network = "Download and update AI models"
+files = "Add new AI model"
+network = "Download trained AI models"
+clipboard = "Copy and paste 3D models"
+
+[build]
+paths_exclude_pattern = [
+  "__pycache__/",
+  "/.git/",
+  "/.gitignore",
+  "/*.zip",
+  "/*.bat",
+  "/*.sh",
+  "/.DS_Store",
+  "/*.blend1",
+  "/*.blend",
+  "/models/motion_inbetweening/experiments/lafan1_context_model_release/*.pth",
+  "/models/motion_inbetweening/experiments/lafan1_context_model_release/*.pkl",
+  "/models/motion_inbetweening/experiments/lafan1_detail_model_release/*.pth",
+  "/models/motion_inbetweening/experiments/lafan1_detail_model_release/*.pkl",
+  "/models/motion_inbetweening/datasets/lafan1/*.bvh",
+  "/models/motion_inbetweening/datasets/lafan1/*.pkl",
+  "/models/motion_inbetweening/output/*.bvh"
+]
