--- a/.gitignore
+++ b/.gitignore
@@ -1,130 +1,22 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
+__pypackages__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# Byte compiled
 *.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# PEP 582
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# Mkdocs documentation
-/site
-
-# Mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
+*.exe
 
 # Editor
 /.vscode
-/scripts/*.json
+
+# Mac OS
+.DS_Store
+
+# Blender files
+*.blend
+*.blend1
 
 # Large files
 /models/motion_inbetweening/experiments/lafan1_context_model_release/*.pth
@@ -134,10 +26,3 @@ cython_debug/
 /models/motion_inbetweening/datasets/lafan1/*.bvh
 /models/motion_inbetweening/datasets/lafan1/*.pkl
 /models/motion_inbetweening/output/*.bvh
-
-# Blender files
-*.blend1
-*.blend
-
-# MacOS
-.DS_Store
